--- a/imports/ui/pages/home/home.html
+++ b/imports/ui/pages/home/home.html
@@ -12,6 +12,20 @@
 		<br>
 		Don't forget to star it too if you find it cool!
 	</p>
+	<p>
+	Projects using this boilerplate :
+	<ul>
+		<li>https://talkalang.com</li>
+	</ul>
+	</p>
+	<hr>
+	<h2>Installation</h2>
+	<ul>
+		<li>Clone this repo : <span class="bold">git clone https://github.com/Fen747/meteor-boilerplate</span></li>
+		<li>Change Directory : <span class="bold">cd meteor-boilerplate</span></li>
+		<li>Install NPM dependencies : <span class="bold">meteor npm install</span></li>
+		<li>Enjoy !</li>
+	</ul>
 	<hr>
 	<h2>Doc</h2>
 	<h3>Packages ( /.meteor/packages )</h3>
@@ -46,7 +60,7 @@
 		<li><span class="bold">getEmailfromUid</span>( userId ) - use this to get the first mail from a user</li>
 		<li><span class="bold">secure</span>( collection ) - use this to automatically deny all writing permissions for the user in production</li>
 		<li><span class="bold">endLoadingScreen</span> - great to remove loading screen you could have injected via Arunoda's initial inject package</li>
-		<li><span class="bold">playAnimation</span>( animationName, elementId, animationTime = 1000 ) - play an animation on an element adding by adding it a class and removing it automatically after 'animationTime' ms</li>
+		<li><span class="bold">playAnimation</span>( animationName, elementId, animationTime = 1000 ) - play an animation on an element by adding it a class and removing it automatically after 'animationTime' ms</li>
 	</ul>
 	<h4>Blaze helpers ( /imports/library/blazeHelpers.js )</h4>
 	<ul>
