--- a/imports/ui/pages/home/home.html
+++ b/imports/ui/pages/home/home.html
@@ -5,7 +5,7 @@
 		GitHub repository : <a href="https://github.com/AlainRo/meteor-multd3/issues/1">https://github.com/Fen747/meteor-boilerplate</a>
 	</p>
 	<p>
-		by <span class="bold">David Panart</span> aka. <span class="bold">Fen747</span>
+		by <span class="bold"><a href="https://twitter.com/DavidPanart">David Panart</a></span> aka. <span class="bold">Fen747</span>
 	</p>
 	<p>
 		Feel free to fork this repository.
