added the optimized version of Meteor.user()

--- a/imports/ui/pages/home/home.html
+++ b/imports/ui/pages/home/home.html
@@ -47,10 +47,10 @@
 		<li>
 			Use it like this :
 			<ul>
-				<li>Meteor.user() // return the whole current user doc</li>
-				<li>Meteor.user( "aUserIdString" ) // return the whole specified user doc</li>
-				<li>Meteor.user( [ 'field1', 'field2', ... ] ) // return the filtered current user doc</li>
-				<li>Meteor.user( "aUserIdString", [ 'field1', 'field2', ... ] ) // return the filtered specified user doc</li>
+				<li><span class="bold">Meteor.user()</span> // return the whole current user doc</li>
+				<li><span class="bold">Meteor.user( "aUserIdString" )</span> // return the whole specified user doc</li>
+				<li><span class="bold">Meteor.user( [ 'field1', 'field2', ... ] )</span> // return the filtered current user doc</li>
+				<li><span class="bold">Meteor.user( "aUserIdString", [ 'field1', 'field2', ... ] )</span> // return the filtered specified user doc</li>
 			</ul>
 		</li>
 	</ul>
