--- a/imports/ui/pages/home/home.html
+++ b/imports/ui/pages/home/home.html
@@ -104,7 +104,7 @@
 	</ul>
 	<h4>DOM Manipulation</h4>
 	<ul>
-		<li><span class="bold">createDOMElement</span>( tag, classList, id, dataset, innerHTML) - Use this passing as parameter an object containing the attributes you want to assign to the created element (please, read the function signature for details)</li>
+		<li><span class="bold">createDOMElement</span>({ tag, classList, id, dataset, innerHTML }) - Use this passing as parameter an object containing the attributes you want to assign to the created element (please, read the function signature for details)</li>
 	</ul>
 	<h4>Functional Programming ( /imports/library/funcProg.js )</h4>
 	<ul>
