DDP logging & reactive window size

--- a/imports/ui/pages/home/home.html
+++ b/imports/ui/pages/home/home.html
@@ -17,7 +17,7 @@
 	Don't forget to star it too if you find it cool!
 </p>
 <p>
-	Projects using this boilerplate :
+	Public projects using this boilerplate :
 	<ul>
 		<li>https://talkalang.com</li>
 	</ul>
