--- a/imports/ui/pages/home/home.html
+++ b/imports/ui/pages/home/home.html
@@ -19,7 +19,7 @@
 <p>
 	Public projects using this boilerplate :
 	<ul>
-		<li>https://talkalang.com</li>
+		<li><a href="https://talkalang.com">https://talkalang.com</a></li>
 	</ul>
 </p>
 <hr>
